# pywebapp-native

./: .gitignore  LICENSE  README.md  pyproject.toml  test_plugins.py
pywebapp/: __init__.py  cli.py
pywebapp/core/: __init__.py  api.py  context.py  discovery.py  logger.py  registry.py  server.py
pywebapp/desktop/: __init__.py  bridge.py  hot_reload.py  runner.py
pywebapp/plugins/: __init__.py  permissions.py
pywebapp/scripts/: __init__.py  build_android.py  build_android_release.py  build_desktop.py  build_frontend.py  dev_sync.py  run_desktop.py  sync_config.py  utils.py
