[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pywebapp-native"
version = "2.2.1"
authors = [
  { name="Sonu Vishwakarma", email="sonuportfolio77@gmail.com" },
]
license = "MIT"
description = "A high-performance, scalable cross-platform framework using Python and React."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pywebview>=4.0",
    "pyinstaller>=5.0",
    "requests",
    "flask>=3.0",
    "flask-cors>=4.0",
]

[project.scripts]
pywebapp = "pywebapp.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pywebapp*"]
